welcome.lessons.welcome.variables.Variables.scala.error
Variables:1: error: identifier expected but integer literal found.
var x:int == 0
             ^